--- a/local.conf
+++ b/local.conf
@@ -29,3 +29,6 @@ OFFLINE=True
 # Neutron complete
 #ENABLED_SERVICES=g-api,g-reg,key,n-api,n-crt,n-obj,n-cpu,n-cond,n-sch,n-novnc,n-xvnc,n-cauth,rabbit,mysql
 #ENABLED_SERVICES+=,q-svc,q-agt,q-dhcp,q-l3,q-meta
+
+# Enable slow query log. NOTE: Produces LARGE files
+#DATABASE_QUERY_LOGGING=True
